--- a/pages/vehiculo.html
+++ b/pages/vehiculo.html
@@ -91,7 +91,9 @@
           <img alt="SW4" src="../img/sw4.png"  width="100%" height="270"/>
         </a>
       </div>
-      <h2>Elija su proximo TOYOTA</h2>
+      <div>
+        <h1>Elija su proximo TOYOTA</h1>
+      </div>
     </section>
     <div class="row half-width">
       <section class="video-container">
