--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Autos del Sur - Inicio</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -86,7 +87,7 @@ que lleva a info de Toyota. Video y noticias que las pude dividir en 2 -->
           </a>
         </div>
       </div>
-      <h2 class="text-center">Seleccione alguno de nuestros modelos destacados para más información</h2>
+      <h1 class="text-center animate__backInDown">Seleccione alguno de nuestros modelos destacados para más información</h1>
     </section>
     <div class="row half-width">
       <section class="col-lg-6 video-container">
