--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -64,6 +64,7 @@
         </div>
       </div>
     </div>
+    <h1>ENVIENOS SU CONSULTA</h1>
     <form class="row g-3">
       <div class="col-md-6">
         <label for="inputEmail4" class="form-label">Email</label>
