--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="./img/logo.png" width="250px" height="50px" alt="Logo">   
+          <img src="./img/logo.webp" width="250px" height="50px" alt="Logo Autos del Sur">   
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -59,13 +59,13 @@ que lleva a info de Toyota. Video y noticias que las pude dividir en 2 -->
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/carrusel1.png" class="d-block w-100" alt="...">
+          <img src="./img/carrusel1.webp" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./img/carrusel2.png" class="d-block w-100" alt="...">
+          <img src="./img/carrusel2.webp" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./img/carrusel3.png" class="d-block w-100" alt="...">
+          <img src="./img/carrusel3.webp" class="d-block w-100" alt="...">
         </div>
       </div>
     </div>
@@ -73,17 +73,17 @@ que lleva a info de Toyota. Video y noticias que las pude dividir en 2 -->
       <div class="row">
         <div class="col-lg-4">
           <a href="https://ads.e.toyota.com.ar/inventory/corolla-cross-hybrid" target="_blank" title="Corolla Cross">
-            <img alt="Corolla Cross" src="./img/corolla cross.png" class="img-fluid" />
+            <img alt="Corolla Cross" src="./img/corolla cross.webp" class="img-fluid" />
           </a>
         </div>
         <div class="col-lg-4">
           <a href="https://ads.e.toyota.com.ar/inventory/corolla" target="_blank" title="Corolla">
-            <img alt="Corolla" src="./img/corolla xli.png" class="img-fluid" />
+            <img alt="Corolla" src="./img/corolla xli.webp" class="img-fluid" />
           </a>
         </div>
         <div class="col-lg-4">
           <a href="https://ads.e.toyota.com.ar/inventory/hilux-cabina-doble" target="_blank" title="Hilux">
-            <img alt="Hilux" src="./img/hilux.png" class="img-fluid" />
+            <img alt="Hilux" src="./img/hilux.webp" class="img-fluid" />
           </a>
         </div>
       </div>
