--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/estilos.css">
-  <link rel="shortcut icon" href="./img/logotoyota.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="./img/logotoyota.webp" type="image/x-icon">
 </head>
 <body>
   <!-- Aca va el memu y logo -->
@@ -59,13 +59,13 @@ que lleva a info de Toyota. Video y noticias que las pude dividir en 2 -->
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/carrusel1.webp" class="d-block w-100" alt="...">
+          <img src="./img/carrusel1.webp" class="d-block w-100" alt="Imagen de carrousel 1">
         </div>
         <div class="carousel-item">
-          <img src="./img/carrusel2.webp" class="d-block w-100" alt="...">
+          <img src="./img/carrusel2.webp" class="d-block w-100" alt="Imagen de carrousel 2">
         </div>
         <div class="carousel-item">
-          <img src="./img/carrusel3.webp" class="d-block w-100" alt="...">
+          <img src="./img/carrusel3.webp" class="d-block w-100" alt="Imagen de carrousel 3">
         </div>
       </div>
     </div>
