--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/estilos.css">
-  <link rel="shortcut icon" href="../img/logotoyota.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="../img/logotoyota.webp" type="image/x-icon">
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="../img/logo.png" width="250px" height="50px" alt="Logo">   
+          <img src="../img/logo.webp" width="250px" height="50px" alt="Logo Autos del Sur">   
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -54,13 +54,13 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/carrusel1.png" class="d-block w-100" alt="...">
+          <img src="../img/carrusel1.webp" class="d-block w-100" alt="Imagen Carrousel 1">
         </div>
         <div class="carousel-item">
-          <img src="../img/carrusel2.png" class="d-block w-100" alt="...">
+          <img src="../img/carrusel2.webp" class="d-block w-100" alt="Imagen Carrousel 1">
         </div>
         <div class="carousel-item">
-          <img src="../img/carrusel3.png" class="d-block w-100" alt="...">
+          <img src="../img/carrusel3.webp" class="d-block w-100" alt="Imagen Carrousel 1">
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
         </div>
       </div>
       <div class="col-12">
-        <button type="submit" class="btn btn-primary">Ingresar</button>
+        <button type="submit" class="btn btn-primary">Enviar</button>
       </div>
     </form>
   </main>
