--- a/pages/posventa.html
+++ b/pages/posventa.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/estilos.css">
-  <link rel="shortcut icon" href="../img/logotoyota.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="../img/logotoyota.webp" type="image/x-icon">
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="../img/logo.png" width="250px" height="50px" alt="Logo">   
+          <img src="../img/logo.webp" width="250px" height="50px" alt="Logo Autos del Sur">   
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -55,29 +55,29 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/carrusel1.png" class="d-block w-100" alt="...">
+          <img src="../img/carrusel1.webp" class="d-block w-100" alt="Imagen de carrousel 1">
         </div>
         <div class="carousel-item">
-          <img src="../img/carrusel2.png" class="d-block w-100" alt="...">
+          <img src="../img/carrusel2.webp" class="d-block w-100" alt="Imagen de carrousel 2">
         </div>
         <div class="carousel-item">
-          <img src="../img/carrusel3.png" class="d-block w-100" alt="...">
+          <img src="../img/carrusel3.webp" class="d-block w-100" alt="Imagen de carrousel 3">
         </div>
       </div>
     </div>
     <section class="vehiculos-section">
       <div class="vehiculos-container row">
         <div class="col-md-3">
-          <img alt="Corolla Cross" src="../img/pvta-1.webp" class="w-100" height="270"/>
+          <img alt="Accesorio 1" src="../img/pvta-1.webp" class="w-100" height="270"/>
         </div>
         <div class="col-md-3">
-          <img alt="Corolla Cross" src="../img/accesorio2.jpeg" class="w-100" height="270"/>
+          <img alt="Accesorio 2" src="../img/accesorio2.webp" class="w-100" height="270"/>
         </div>
         <div class="col-md-3">
-          <img alt="Corolla Cross" src="../img/accesorio3.jpeg" class="w-100" height="270"/>
+          <img alt="Accesorio 3" src="../img/accesorio3.webp" class="w-100" height="270"/>
         </div>
         <div class="col-md-3">
-          <img alt="Corolla Cross" src="../img/accesorio4.jpeg" class="w-100" height="270"/>
+          <img alt="Accesorio 4" src="../img/accesorio4.webp" class="w-100" height="270"/>
         </div>
       </div>
       <h1>Equipe su TOYOTA con accesorios ORIGINALES</h1> 
@@ -101,10 +101,9 @@
       </div>
       <div class="col-md-6">
         <section class="noticias-container">
-          <h2>Noticias</h2>
           <div class="noticia">
-            <h3>Plan de Ahorro</h3>
-            <p>Suscribite a la mejor financiacion bla bla bla bla bla .</p>
+            <h3>Chequeo de campañas</h3>
+            <p>Contactate con nostros y averigua si tu vehiculo esta alcanzado por alguna campaña de revision: 08102200222 .</p>
           </div>
         </section>
       </div>
