--- a/pages/vehiculo.html
+++ b/pages/vehiculo.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/estilos.css">
-  <link rel="shortcut icon" href="../img/logotoyota.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="../img/logotoyota.webp" type="image/x-icon">
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="../img/logo.png" width="250px" height="50px" alt="Logo">   
+          <img src="../img/logo.webp" width="250px" height="50px" alt="Logo Autos del Sur">   
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -54,41 +54,41 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/carrusel1.png" class="d-block w-100" alt="...">
+          <img src="../img/carrusel1.webp" class="d-block w-100" alt="Imagen de carrousel 1">
         </div>
         <div class="carousel-item">
-          <img src="../img/carrusel2.png" class="d-block w-100" alt="...">
+          <img src="../img/carrusel2.webp" class="d-block w-100" alt="Imagen de carrousel 2">
         </div>
         <div class="carousel-item">
-          <img src="../img/carrusel3.png" class="d-block w-100" alt="...">
+          <img src="../img/carrusel3.webp" class="d-block w-100" alt="Imagen de carrousel 3">
         </div>
       </div>
     </div>
     <section class="vehiculos-section">
        <div class="vehiculos-container">
         <a href="./fichacross.html" title="Corolla Cross">
-          <img alt="Corolla Cross" src="../img/corolla cross.png"  width="100%" height="270"/>
+          <img alt="Corolla Cross" src="../img/corolla cross.webp"  width="100%" height="270"/>
         </a>
         <a href="./fichacorolla.html" title="Corolla">
-          <img alt="Corolla" src="../img/corolla xli.png"  width="100%" height="270"/>
+          <img alt="Corolla" src="../img/corolla xli.webp"  width="100%" height="270"/>
         </a>
         <a href="./fichahilux.html" title="hilux">
-          <img alt="Hilux" src="../img/hilux.png"  width="100%" height="270"/>
+          <img alt="Hilux" src="../img/hilux.webp"  width="100%" height="270"/>
         </a> 
         <a href="./fichayaris.html" title="yaris">
-          <img alt="Yaris" src="../img/yaris.png"  width="100%" height="270"/>
+          <img alt="Yaris" src="../img/yaris.webp"  width="100%" height="270"/>
         </a> 
         <a href="./fichaetios.html"  title="Etios">
-          <img alt="Erios" src="../img/etios.png"  width="100%" height="270"/>
+          <img alt="Etios" src="../img/etios.webp"  width="100%" height="270"/>
         </a> 
         <a href="./fichachr.html" title="chr">
-          <img alt="C-HR" src="../img/chr.png"  width="100%" height="270"/>
+          <img alt="C-HR" src="../img/chr.webp"  width="100%" height="270"/>
         </a> 
         <a href="./ficharav4.html"  title="rav4">
-          <img alt="Rav4" src="../img/rav4.png"  width="100%" height="270"/>
+          <img alt="Rav4" src="../img/rav4.webp"  width="100%" height="270"/>
         </a> 
         <a href="./fichasw4.html"  title="sw4">
-          <img alt="SW4" src="../img/sw4.png"  width="100%" height="270"/>
+          <img alt="SW4" src="../img/sw4.webp"  width="100%" height="270"/>
         </a>
       </div>
       <div>
