--- a/pages/fichahilux.html
+++ b/pages/fichahilux.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Concesionario oficial toyota">
+  <meta name="keywords"  content="toyota, vehiculos, 0km, usados, plan de ahorro, financiacion">
   <title>Sitio Web - FichaHilux</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400;700&display=swap" rel="stylesheet">
