--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,39 +73,20 @@
         <input type="email" class="form-control" id="inputEmail4">
       </div>
       <div class="col-md-6">
-        <label for="inputPassword4" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="inputPassword4">
+        <label for="inputZip" class="form-label">Telefono</label>
+        <input type="text" class="form-control" id="inputZip">
       </div>
-      <div class="col-12">
+      <div class="col-6">
         <label for="inputAddress" class="form-label">Dirección</label>
         <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-      </div>
-      <div class="col-12">
-        <label for="inputAddress2" class="form-label">Dirección 2</label>
-        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
       </div>
       <div class="col-md-6">
         <label for="inputCity" class="form-label">Ciudad</label>
         <input type="text" class="form-control" id="inputCity">
       </div>
-      <div class="col-md-4">
-        <label for="inputState" class="form-label">Estado</label>
-        <select id="inputState" class="form-select">
-          <option selected>Elige...</option>
-          <option>...</option>
-        </select>
-      </div>
-      <div class="col-md-2">
-        <label for="inputZip" class="form-label">Código postal</label>
+      <div class="col-md-12>
+        <label for="inputZip" class="form-label">Consulta</label>
         <input type="text" class="form-control" id="inputZip">
-      </div>
-      <div class="col-12">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="gridCheck">
-          <label class="form-check-label" for="gridCheck">
-            Verifícame
-          </label>
-        </div>
       </div>
       <div class="col-12">
         <button type="submit" class="btn btn-primary">Enviar</button>
@@ -135,6 +116,5 @@
       </div>
     </div>
   </footer>
-  
 </body>
 </html>
