agregue mediaquery para ver en mobil iframes uno debajo del otro

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@ que lleva a info de Toyota. Video y noticias que las pude dividir en 2 -->
       <h1 class="text-center animate__backInDown">Seleccione alguno de nuestros modelos destacados para más información</h1>
     </section>
     <div class="row half-width">
-      <section class="col-lg-6 video-container">
+      <section class="col-lg-6 video-container desktop">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/of3KoenTbQI" frameborder="0" allowfullscreen></iframe>
       </section>
-      <section class="col-lg-6 video-container">
+      <section class="col-lg-6 video-container desktop">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/4MDcc8_ZpFY" frameborder="0" allowfullscreen></iframe>
       </section>
       <h2 class="col-lg-12 text-center">Noticias</h2>
