--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -66,10 +66,10 @@
     </section>
     <div class="row">
       <div class="row half-width">
-        <section class="col-lg-6 video-container">
+        <section class="col-lg-6 video-container desktop">
           <iframe width="600" height="450" src="https://www.youtube.com/embed/EpKfIr_vFgw" frameborder="0" allowfullscreen></iframe>
         </section>
-        <section class="col-lg-6 video-container">
+        <section class="col-lg-6 video-container desktop">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23244.676109237058!2d-65.33138168916011!3d-43.260128899999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbe0144d1e7c2751b%3A0x18c78fea432413e3!2sAutos%20del%20Sur%20Toyota!5e0!3m2!1sen!2sar!4v1685709162584!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" frameborder="0" allowfullscreen></iframe>
         </section>
       </div>
